[project]
name = "comfyui_object_migration"
description = "This is an experimental project focused on Stable Diffusion (SD) models. In a single generated image, the same object or character consistently maintains a very high level of consistency. I had already attempted to address this issue in the SDXL model."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/TTPlanetPig/Comfyui_Object_Migration"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "Comfyui_Object_Migration"
Icon = ""
